hphp/hack/test/typecheck/classname/typename_array_literal_bad.php.exp
array<[1]intersect(Tstring), [2]intersect(App \classname<[\D]App \D<>, >, App \typename<App \I<>, >)>
File "typename_array_literal_bad.php", line 11, characters 10-13:
Invalid return type (Typing[4110])
File "typename_array_literal_bad.php", line 8, characters 51-51:
This is an object of type I
File "typename_array_literal_bad.php", line 9, characters 46-46:
It is incompatible with an object of type D
